<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".Login.LoginActivity">

    <EditText
        android:id="@+id/emailR"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/rsiWall"
        android:textColorHint="@color/rsiWall"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/rsiWall"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordR"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/rsiWall"
        android:textColorHint="@color/rsiWall"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailR" />

    <EditText
        android:id="@+id/passwordR_confirm"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/rsiWall"
        android:textColorHint="@color/rsiWall"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordR" />

    <Button
        android:id="@+id/signup_button"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:background="@color/rsiWall"
        android:backgroundTint="@color/rsiWall"
        android:elevation="20dp"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/screen_name"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/display_name"
        android:textAlignment="center"
        android:textColor="@color/rsiWall"
        android:textColorHint="@color/rsiWall"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordR_confirm" />


</androidx.constraintlayout.widget.ConstraintLayout>